# E2E-automated-cutomer-service

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  PLAN.md  README.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  deploy.yml
ai/: Dockerfile  pyproject.toml
ai/evals/: README.md  __init__.py  fixtures.py  golden_dataset.py  injection_suite.py  injection_suite_test.py  live_runner.py  runner.py  runner_test.py
ai/runtime/: __init__.py  deps.py  graph.py  graph_test.py  harness.py  harness_test.py  llm.py  llm_test.py  nodes.py  nodes_test.py  providers.py  retrieval.py  runner.py  runner_test.py  schemas.py  schemas_test.py  state.py  support_graph.py  tools.py  tracing.py
ai/runtime/prompts/: __init__.py  support_classifier.v1.md  support_response_composer.v1.md
ai/service/: __init__.py  adapters.py  adapters_test.py  app.py  app_test.py  config.py  config_test.py  eval_parity.py  eval_parity_test.py  http.py  logs.py  request_parsing.py  request_parsing_test.py
apps/console/: AGENTS.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/console/e2e/: reviewer-flow.spec.ts
apps/console/src/: App.test.tsx  App.tsx  config.ts  index.css  main.tsx  review-flow.test.ts  review-flow.ts  vite-env.d.ts
docs/: AI_RUNTIME_HARNESS.md  BACKEND_SPEC.md  DECISIONS.md  DEVELOPMENT_RULES.md  ENGINEERING_HARNESS.md  HORZ_DESIGN_REVIEW.md  PROJECT_HISTORY.md  README.md  SOPS.md  TEST_STRATEGY.md
infra/: docker-compose.yml
infra/nats/: server.conf
infra/observability/: README.md  alerts.yaml
infra/observability/dashboards/: support-overview.json
infra/otel/: otel-collector-config.yaml
infra/production/: .env.example  .gitignore  README.md  ai.Dockerfile  api.Dockerfile  console.Dockerfile  deploy.sh  docker-compose.yml  rollback.sh  worker.Dockerfile
infra/production/backup/: pg-backup.sh  pg-restore-drill.sh
infra/production/caddy/: Caddyfile
infra/production/console/: Caddyfile
scripts/: session-harness-check.mjs
(+35 files in other folders)
