[project]
name = "support-ai-runtime"
version = "0.1.0"
description = "Python AI runtime for the customer support platform."
requires-python = ">=3.12"
# The v1 support agent graph runs on the standard library behind pluggable ports
# (ADR-0016). Python tooling is managed by uv (`.python-version` pins CPython
# 3.12, which uv provisions); the harness runs the suite via `uv run` so it is
# reproducible regardless of the system `python3` (which is 3.14).
dependencies = []

# The real AI stack, proven to install on managed CPython 3.12 via uv. A session
# migrating a port to a real model/graph pulls these with `uv sync --extra llm`
# and swaps the adapter behind ModelProvider / RetrievalPort / ToolExecutor.
[project.optional-dependencies]
llm = [
  "pydantic>=2",
  "langgraph>=0.2",
  "langchain-core>=0.3",
]

# The Milestone 14 service bridge: a FastAPI sidecar exposing the runtime as
# `POST /internal/ai/run`. httpx is required by fastapi's TestClient (the
# eval-parity harness drives the service in-process through it).
service = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
python_files = ["*_test.py"]
